<resources>
    <string name="app_name">Ukraine Wallpaper</string>
    <string name="wallpaper_set">Заставку встановлено</string>
    <string name="error">Помилка</string>
    <string name="share">Оберіть додаток</string>
    <string name="done">Завантажено</string>

    <string name="menu_wallpaper">Встановити заставку</string>
    <string name="menu_share">Поділитися</string>
    <string name="menu_download">Завантажити</string>

    <string name="popup_menu_title">Налаштування відображення:</string>
    <string name="theme">Тема</string>
    <string name="system">Системна</string>
    <string name="dark">Темна</string>
    <string name="light">Світла</string>
</resources>