<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="15dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/popup_menu_title"
                android:textColor="@color/text_color"
                android:textSize="12sp"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/visibilityRadioGroup"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioButton
                    android:id="@+id/radioButton1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:buttonTint="@color/blue"
                    android:checked="false"
                    android:text="1X2"
                    android:textSize="12sp" />

                <RadioButton
                    android:id="@+id/radioButton2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/blue"
                    android:checked="true"
                    android:text="2X4"
                    android:textSize="12sp" />

                <RadioButton
                    android:id="@+id/radioButton3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/blue"
                    android:text="3X5"
                    android:textSize="12sp" />
            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/theme"
                    android:textColor="@color/text_color"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <RadioGroup
                    android:id="@+id/themeRg"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <RadioButton
                        android:id="@+id/radioButtonSystem"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/blue"
                        android:checked="true"
                        android:text="@string/system"
                        android:textSize="12sp" />

                    <RadioButton
                        android:id="@+id/radioButtonDark"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/blue"
                        android:text="@string/dark"
                        android:textSize="12sp" />

                    <RadioButton
                        android:id="@+id/radioButtonLight"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/blue"
                        android:text="@string/light"
                        android:textSize="12sp" />
                </RadioGroup>
            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>